added links to the navbar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
     <div class="navbar-container">
         <div class="navbar-content">
-            <h2>Header Logo</h2>
+            <h2><img src="./images/icon.png" width="70px" height="70px"></h2>
             <div class="navbar-para">
-                <p>header link one</p>
-        <p>header link two</p>
-        <p>header link three</p>
+                <p><a class="tag" href="#">Home</a></p>
+                <p><a class="tag" href="Projects/Odin-recipes/index.html">Recipes</a></p>
+       
+        <p><a class="tag" href="https://www.toppr.com/guides/science/food-where-does-it-comes-from/sources-of-food/" target="_blank">Food Sources</a></p>
         </div>
         </div>
         <div class="hero-section"> 
             <div class="header">
-                <h1>Food</h1>
+                <h1>Food</h1>t=
                 <h3 class="hero">Food is any substance consumed by an organism for nutritional support. Food is usually of plant, animal, or fungal origin and contains essential nutrients such as carbohydrates, fats, proteins, vitamins, or minerals. The substance is ingested by an organism and assimilated by the organism's cells to provide energy, maintain life, or stimulate growth. Different species of animals have different feeding behaviours that satisfy the needs of their metabolisms and have evolved to fill a specific ecological niche within specific geographical contexts.</h3>
                <button>Sign up</button>
             </div>
